# bolinas-dna

./: .gitignore  .pre-commit-config.yaml  .skyignore  AGENTS.md  README.md  all_unsplit_run.yaml  conservation_eqtl_run.yaml  eqtl_run.yaml  mendelian_run.yaml  pyproject.toml  rematch_run.yaml  scratch_eqtl_verify.py
.github/ISSUE_TEMPLATE/: experiment.md
.github/workflows/: dashboard.yml
_scratch/: sky_cycle_gh200.sh
dashboard/: .gitignore  methods.yaml  models.yaml  observablehq.config.js  package-lock.json  package.json
dashboard/src/: about.md  index.md  methods.md  models.md
experiments/: README.md  __init__.py  defaults.py  exp0_example.py  exp179_eval_only.py
experiments/parity/: exp160_parity.py  exp179_eval_only.py
experiments/per_region/: exp187_per_region.py
experiments/smoke_tests/: smoke_per_region.py
plots/: exp187_per_region.py  plot_exp55_evolutionary_timescales.py  plot_exp58_evolutionary_timescales.py
scratch/: biofoundation_genome_issue.md  biofoundation_issue_body.md  evals_v2_exp136-proj_v30__complex_traits_scores.parquet  evals_v2_exp55-mammals_mendelian.parquet  issue_body_current.md  issue_body_initial.md  iter0_comment.md  iter1_comment.md  iter1_comment_template.md  iter1_leaderboard.parquet  iter1_partial_exp136-proj_v30__win255__complex_traits.parquet  iter1b_comment.md  iter1b_fast_baselines.parquet  iter1b_fast_baselines.py  iter1b_scalar_combos.parquet  iter1b_scalar_combos.py  iter1c_scalars_only.parquet  iter1c_scalars_only.py  iter1cde_comment.md  iter1d_pairaware.parquet  iter1d_pairaware_deepdive.py  iter1e_widen_C.py  iter1e_xwide.parquet  iter1f_comment.md  iter1f_partial.txt  iter2_lora_sweep.py  iter2_lora_sweep2.py  iter2_lora_sweep_eqtl.py  iter2_wrapup_comment.md  iter2_zeroshot_variants.py  iter2a_complex_comment.md  iter2b_lora_head_sweep.py  iter4_bugcheck.py  iter4_compare_all_models.py  iter4_compare_distributional.py  iter4_compare_exp58.py  iter4_scatter_fwd_rc.py  synth_agg.parquet  zeroshot_vep_analysis.py  zeroshot_vep_eqtl_null_investigation.py  (+20 more)
scratch/evals_v2_ref/: _all.parquet  exp136-proj_v30__complex_traits.parquet  exp136-proj_v30__eqtl.parquet  exp136-proj_v30__mendelian_traits.parquet  exp55-mammals__complex_traits.parquet  exp55-mammals__eqtl.parquet  exp58-animals__complex_traits.parquet  exp58-animals__eqtl.parquet  exp58-animals__mendelian_traits.parquet  exp58-mammals__complex_traits.parquet  exp58-mammals__eqtl.parquet  exp58-mammals__mendelian_traits.parquet  exp59-mammals__complex_traits.parquet  exp59-mammals__eqtl.parquet  exp59-mammals__mendelian_traits.parquet
scratch/iter1/: comment.md  issue_body_current.md  metrics_aggregated.csv  metrics_aggregated.parquet
scratch/iter2/: comment.md  comment_followup.md  eqtl_null_summary.parquet  iter2_per_cell_metrics.parquet  paired_rk_minus_llr_plus_l2flat_last.parquet  paired_rk_minus_llr_plus_top_emb.parquet  paired_rk_subset_tailored.parquet
scratch/iter3/: comment.md  iter3_exp55-mammals__win256__complex_traits.parquet  iter3_exp55-mammals__win256__eqtl.parquet  iter3_exp55-mammals__win256__mendelian_traits.parquet  iter3_paired_vs_baselines.parquet  iter3_solo_metrics.parquet  sky_run.yaml
scratch/iter4/: comment.md  comment_2way_embed_ag.md  comment_2way_ensemble.md  comment_3way.md  comment_boundary.md  comment_bugcheck.md  comment_exp166_p1B.md  comment_exp166_p1B_3datasets.md  comment_exp166_p1B_alphagenome.md  comment_exp166_p1B_ensembles.md  comment_exp58_animals.md  comment_precision.md  issue_biofoundation_rc_avg.md  issue_body_final.md  issue_bolinas_lm_eval_rc_avg.md  iter4_exp166_p1B_3datasets_best.parquet  iter4_exp166_p1B_3datasets_full.parquet  iter4_fwd_exp166-p1B__win255__complex_traits.parquet  iter4_fwd_exp166-p1B__win255__eqtl.parquet  iter4_fwd_exp166-p1B__win255__mendelian_traits.parquet  iter4_fwd_fp32_exp58-mammals__win256__mendelian_traits.parquet  iter4_fwd_rc_distributional.parquet  iter4_fwd_rc_variability.parquet  iter4_fwd_rc_variability_pooled.parquet  iter4_joint_llr_pearson_exp55_vs_exp58.parquet  iter4_paired_strand_modes.parquet  iter4_rc_exp136-proj_v30__win255__mendelian_traits.parquet  iter4_rc_exp166-p1B__win255__mendelian_traits.parquet  iter4_rc_exp55-mammals__win256__mendelian_traits.parquet  iter4_rc_exp58-animals__win256__mendelian_traits.parquet  iter4_rc_exp58-mammals__win256__mendelian_traits.parquet  iter4_rc_exp59-mammals__win256__mendelian_traits.parquet  iter4_solo_metrics.parquet  sky_bugcheck.yaml  sky_bugcheck_more_models.yaml  sky_exp166_1b.yaml  sky_exp166_1b_three_datasets.yaml  sky_exp58_animals.yaml  sky_precision_test.yaml  sky_run.yaml
scratch/iter5/: iter5_comment_complex_traits.md  iter5_comment_eqtl.md  iter5_comment_mendelian_traits.md  iter5_comment_summary.md  iter5_metrics_exp166_p1B_rcavg.parquet  iter5_q1_comment.md  iter5_q1_paired_tests.parquet  iter5_q1_per_subset_comment.md  iter5_q1_per_subset_paired.parquet  iter5_q2_comment.md  iter5_q2_paired_tests.parquet  iter5_report.md  (+5 more)
scratch_audit/: audit.yaml  comment_a.md  comment_bc.md  comment_close.md  comment_correction.md  comment_d.md  comment_final.md  comment_hal_vs_ncbi.md  comment_iter5.md  comment_iter5_revised.md  hal_vs_ncbi.sh  hal_vs_ncbi_comparison.tsv  issue_body.md  issue_body_v2.md  per_species_small.tsv  per_species_stats.tsv  refseq_baseline.py  refseq_baseline_summary.json  section_a_example.sh  section_bc_quantify.py  section_c_repeatmasker.py
scripts/: benchmark_segmentation_predict.py  eda8_plot.py  eda_functional_pos_plot.py  evo2_ll_gap.py  evo2_sanity_check.py  evo2_traitgym_v2.py  evo2_traitgym_v2_metrics.py  gh-upload-img.py  gist_upload.py  remove-worktree.sh  setup-worktree.sh  upload_bolinas_evals_with_sequences.py  upload_char_tokenizer.py  upload_kmer_tokenizer.py  zrs_attention_analysis.py
skypilot/: README.md  evo2_ll_gap.sky.yaml  evo2_traitgym.sky.yaml  seg_positive_set.sky.yaml
tests/: conftest.py  test_alignment_minimap2.py  test_alignment_mmseqs2.py  test_bin_predictions.py  test_eda.py  test_intervals.py  test_lift.py  test_negative_sampling.py  test_utils.py
(+640 files in other folders)
