[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bolinas"
version = "0.0.1"
description = "DNA training dataset creation and genomic interval utilities"
requires-python = ">=3.12"
dependencies = [
    "bioframe",
    "biofoundation @ git+https://github.com/Open-Athena/biofoundation.git",
    "biopython>=1.85",
    "datasets",
    "huggingface_hub",
    "matplotlib",
    "numpy",
    "pandas",
    "polars",
    "pyarrow>=21.0.0",
    "pyBigWig",
    "scikit-learn",
    "scipy",
    "seaborn",
    "snakemake",
    "torch",
    "tqdm",
    "tokenizers",
    "transformers",
    "zstandard",
    "snakemake-storage-plugin-s3>=0.3.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "snakefmt",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bolinas"]

[tool.ruff.lint]
# Add any project-specific lint rules here
ignore = []
