[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bolinas"
version = "0.0.1"
description = "DNA training dataset creation and genomic interval utilities"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bioframe",
    "biopython>=1.85",
    "cyvcf2",
    "datasets",
    "einops",
    "huggingface_hub",
    "jaxtyping",
    "liftover",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "polars",
    "polars-bio",
    "pyarrow>=21.0.0",
    "pyBigWig",
    "pyfaidx>=0.8.0",
    "scikit-learn",
    "scipy",
    "seaborn",
    "snakemake",
    "torch",
    "tqdm",
    "tokenizers",
    "transformers[torch]",
    "zstandard",
    "snakemake-storage-plugin-s3>=0.3.6",
    "wandb",
]

[project.optional-dependencies]
# Delegate to marin's own `tpu` extra so `uv lock --upgrade-package marin`
# auto-picks up future jax/torch/libtpu bumps. Linux-only at the consumer
# level (matches marin-experiments/tiny-stories@28d53c6 from 2026-05-08);
# TPU isn't usable on Mac so dropping the macOS install is correct.
tpu = ["marin[tpu]; sys_platform == 'linux'"]
# Marin-launched DNA experiments. Iris workers run ``uv sync`` with `--extra`
# flags (not `--group`), so this lives under `[project.optional-dependencies]`
# rather than `[dependency-groups]`. Local users opt in with
# `uv sync --extra marin`; snakemake / PyTorch contributors who don't run
# marin experiments leave it out and skip the JAX/levanter install cost.
marin = [
    "marin",
    "marin-levanter",
    "marin-iris",
    "marin-zephyr",
    "marin-rigging",
    # `marin-levanter[lm_eval]`'s extra is a URL dep (`lm-eval @ git+...`);
    # uv requires URL deps as direct (top-level) requirements. **Bump the rev
    # in lockstep with marin-levanter** — no automated check ties them, so
    # after `uv lock --upgrade-package marin-levanter` verify the rev still
    # matches the one marin-levanter pins:
    #   unzip -p .venv/lib/python3.12/site-packages/marin_levanter-*.dist-info/METADATA \
    #     | grep 'lm-eval @'
    "lm-eval @ git+https://github.com/stanford-crfm/lm-evaluation-harness.git@d5e3391f22cde186c827674d5c3ec7c5f4fe0cab",
    # marin-root (which ships marin's `experiments/` package) is deliberately
    # *not* depended on here — its pyproject carries
    # ``[tool.uv.sources] marin-* = { workspace = true }``, which propagates
    # to consumers and overrides the find-links wheels for every marin
    # sister package, dropping the BUILD_DATE the iris controller's
    # freshness check requires. The two `experiments.*` symbols the parity
    # check needs (`qwen3_0_6b_hd128`, `default_tokenize`) are vendored at
    # the bottom of `experiments/parity/exp160_parity.py`.
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "snakefmt",
]
enhancer-classification = [
    "alphagenome-pytorch>=0.3.0",
    "lightning>=2.0",
    "py2bit",
    "torchmetrics>=1.0",
]
alphagenome-eval = [
    "alphagenome",
]
# `aws` CLI for the complex_traits / ldscore_download snakemake rule (added
# in #159 — the rule shells out to `aws s3 cp ...`). awscli pins older
# fsspec/s3fs that conflict with marin's; gate it as an opt-in group via
# `[tool.uv.conflicts]` below so the marin group can lock independently.
# Pipeline users running ldscore_download install with `--group aws-cli`.
aws-cli = [
    "awscli>=1.45.2",
]

[tool.uv]
# awscli (in the `aws-cli` group) pins fsspec/s3fs strictly below the
# versions marin requires; resolve them in separate "universes" so each
# extra/group locks against its own compatible set. The `tpu` extra now
# delegates to `marin[tpu]`, so it transitively pulls marin in too and
# needs the same isolation.
conflicts = [
    [
        { extra = "marin" },
        { group = "aws-cli" },
    ],
    [
        { extra = "tpu" },
        { group = "aws-cli" },
    ],
]
fork-strategy = "fewest"
prerelease = "allow"
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
override-dependencies = [
    "omegaconf>=2.4.0.dev4",
    "antlr4-python3-runtime==4.11",
    "python-multipart>=0.0.22",
    "wheel>=0.46.2",
    "datasets>=3.1.0,<4.0.0",
    "equinox>=0.11.10",
    # Pin pandas to 2.x — `prerelease = "allow"` (above) lets uv pick the
    # 3.0 prerelease, which changes parquet round-trip dtypes from `object`
    # to `StringDtype` and breaks tests/test_intervals.py. Keeps existing
    # bolinas-dna code on the same pandas major it was developed against.
    "pandas>=2.0,<3.0",
]
# marin sister-packages, kitoken, and dupekit ship as GitHub release wheels
# (not PyPI). Released marin-* wheels carry a baked-in BUILD_DATE that the
# iris controller's freshness check needs; workspace builds don't stamp it.
# `marin-finelog-latest` was added by `marin-community/marin#5565` after this
# repo first locked — the issue was tracked at
# https://github.com/marin-community/marin/issues/5564.
find-links = [
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-haliax-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-levanter-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-iris-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-zephyr-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-rigging-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-fray-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-finelog-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/dupekit-0.1.0-40ac799",
    "https://github.com/marin-community/kitoken/releases/expanded_assets/kitoken-0.10.2-a3012f4",
]

[[tool.uv.index]]
name = "marin-resiliparse"
url = "https://marin-community.github.io/chatnoir-resiliparse/simple"

[tool.uv.sources]
resiliparse = { index = "marin-resiliparse" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bolinas"]

[tool.ruff.lint]
# jaxtyping uses string annotations like ``Int[Tensor, "B L"]`` that ruff's
# F722 parser rejects; suppress for the whole project.
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
# Scratch / one-off audit scripts pin thread-affinity env vars *before*
# importing polars/numpy, so imports legitimately live below module-top
# logic. Don't fight it.
"snakemake/evals/scratch/*.py" = ["E402"]
